--- a/The_Odin_Project/JavaScript_Practice/index.html
+++ b/The_Odin_Project/JavaScript_Practice/index.html
@@ -8,7 +8,37 @@
   </head>
   <body>
 
+<script>
 
+// 1. Write a function called add7 that takes one number and returns that number + 7
+function add7 (number) {
+  console.log(number + 7);
+  return add7;
+}
+// Test
+add7 (5);
+add7 (10);
 
+// 2. Write a function called multiply that takes 2 numbers and returns their product
+function multiply (a, b) {
+  console.log (a * b);
+  return multiply;
+}
+//Test
+multiply(5, 5);
+
+// 3. Write a function called capitalize that takes a string and returns that string
+// with only the first letter capitalized.
+function capitalize (string_value) {
+
+  console.log(string_value.toUpperCase());
+  return string_value;
+
+}
+capitalize('maggie');
+capitalize('MAGGIE');
+capitalize('mAgGiE');
+
+</script>
   </body>
 </html>
